fixed overflow (#114)

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,7 +7,7 @@ body {
 }
 
 main {
-  height: 70vh;
+  height: 50vh;
   overflow-y: scroll;
 }
 
